python/flask-router/manifests/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: flask-router
  labels:
    app: flask-router
    app.kubernetes.io/component: flask-router
    app.kubernetes.io/instance: flask-router
spec:
  replicas: 1
  selector:
    matchLabels:
      deployment: flask-router
  template:
    metadata:
      labels:
        deployment: flask-router
    spec:
      containers:
        - name: flask-router
          image: 'quay.io/rh_ee_akugel/flask-router:0.0.2'
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8081
              protocol: TCP
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
