python/flask-router/manifests/route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-router
  labels:
    app: flask-router
    app.kubernetes.io/component: flask-router
    app.kubernetes.io/instance: flask-router
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flask-router
            port:
              number: 8081
